--- a/1/congrats.html
+++ b/1/congrats.html
@@ -237,7 +237,7 @@
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
               <tr>
                 <td align="center" valign="top">
-                  <img src="https://i.ibb.co/DkRVcj3/celebrate.png"
+                  <img src="https://github.com/oMoFoLaYaN/ViceMail/blob/main/1/images/celebrate.png"
                     style="max-width: 100px; height: auto; margin: auto; display: block;">
                 </td>
               </tr><!-- end: tr -->
