--- a/1/congrats.html
+++ b/1/congrats.html
@@ -322,16 +322,16 @@
                         </p>
                         <div style="font-size: 0; margin-top: 15px;">
                           <a href="#" style="margin: 0 5px; background-color: #bda55d; padding: 10px; width: 18px; display: inline-block; border-radius: 100%;">
-                            <img src="https://i.ibb.co/vLGSS4V/facebook-f.png" alt="facebook-f" style="max-width: 60%; margin: auto;">
+                            <img src="https://raw.githubusercontent.com/oMoFoLaYaN/ViceMail/main/1/images/facebook.png" alt="facebook-f" style="max-width: 100%; margin: auto;">
                           </a>
                           <a href="#" style="margin: 0 5px; background-color: #bda55d; padding: 10px; width: 18px; display: inline-block; border-radius: 100%;">
-                            <img src="https://i.ibb.co/BPZcBQJ/instagram.png" alt="instagram" style="max-width: 100%; margin: auto;">
+                            <img src="https://raw.githubusercontent.com/oMoFoLaYaN/ViceMail/main/1/images/Instagram.png" alt="instagram" style="max-width: 100%; margin: auto;">
                           </a>
                           <a href="#" style="margin: 0 5px; background-color: #bda55d; padding: 10px; width: 18px; display: inline-block; border-radius: 100%;">
-                            <img src="https://i.ibb.co/F3bXbh6/linkedin-in.png" alt="linkedin-in" style="max-width: 100%; margin: auto;">
+                            <img src="https://raw.githubusercontent.com/oMoFoLaYaN/ViceMail/main/1/images/linkedin.png" alt="linkedin-in" style="max-width: 100%; margin: auto;">
                           </a>
                           <a href="#" style="margin: 0 5px; background-color: #bda55d; padding: 10px; width: 18px; display: inline-block; border-radius: 100%;">
-                            <img src="https://i.ibb.co/4mkK85y/x-twitter.png" alt="x-twitter" style="max-width: 100%; margin: auto;">
+                            <img src="https://raw.githubusercontent.com/oMoFoLaYaN/ViceMail/main/1/images/twitter.png" alt="x-twitter" style="max-width: 100%; margin: auto;">
                           </a>
                         </div>
                       </td>
